// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customized Popovers 1`] = `null`;

exports[`Default Popovers 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: 0px;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 div:first-child {
  left: 30px;
  border-width: 11px;
  border-bottom-width: 0;
  border-top-color: rgba(0,0,0,0.2);
  bottom: 0;
  margin-bottom: -11px;
  margin-left: -11px;
}

.c0 div:first-child::after {
  content: "";
  border-width: 10px;
  top: -11px;
  margin-left: -10px;
  border-top-color: #fff;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    Top
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Default Popovers bottom 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: 20px;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 div:first-child {
  left: 30px;
  border-width: 11px;
  border-top-width: 0;
  border-bottom-color: rgba(0,0,0,0.2);
  top: 0;
  margin-top: -11px;
  margin-left: -11px;
}

.c0 div:first-child::after {
  content: "";
  border-width: 10px;
  bottom: -11px;
  margin-left: -10px;
  border-bottom-color: #fff;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    bottom
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Default Popovers left 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: 0px;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 div:first-child {
  top: 30px;
  border-width: 11px;
  border-right-width: 0;
  border-left-color: rgba(0,0,0,0.2);
  right: 0;
  margin-right: -11px;
  margin-top: -11px;
}

.c0 div:first-child::after {
  content: "";
  top: 30px;
  border-width: 10px;
  bottom: -11px;
  margin-top: -10px;
  border-left-color: #fff;
  margin-left: -11px;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    left
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Default Popovers left 50% 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: 50px;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 div:first-child {
  top: 30px;
  border-width: 11px;
  border-right-width: 0;
  border-left-color: rgba(0,0,0,0.2);
  right: 0;
  margin-right: -11px;
  margin-top: -11px;
}

.c0 div:first-child::after {
  content: "";
  top: 30px;
  border-width: 10px;
  bottom: -11px;
  margin-top: -10px;
  border-left-color: #fff;
  margin-left: -11px;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    left
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Default Popovers right 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: 20px;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 div:first-child {
  top: 30px;
  border-width: 11px;
  border-left-width: 0;
  border-right-color: rgba(0,0,0,0.2);
  left: 0;
  margin-left: -11px;
  margin-top: -11px;
}

.c0 div:first-child::after {
  content: "";
  top: 30px;
  border-width: 10px;
  border-right-color: #fff;
  margin-top: -10px;
  margin-left: calc(-10px + 1px);
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    right
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Default Popovers right 2`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: undefinedpx;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

.c1 {
  margin-bottom: .5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  color: inherit;
  font-size: 1.75rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    right
  </h3>
  <div>
    Child goes here
  </div>
</div>
`;

exports[`Styled Popovers 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  left: undefinedpx;
  z-index: 1060;
  display: block;
  max-width: 276px;
  padding: 1px;
  font-size: .875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,0.2);
  border-radius: .25rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c0 div:first-child,
.c0 div:first-child:after {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.c0 h3 {
  margin: 0;
  padding: 8px 14px;
  font-size: 14px;
  background-color: #f7f7f7;
  border-bottom: 1px solid #ebebeb;
  border-radius: 5px 5px 0 0;
}

.c0 div:last-child {
  padding: 9px 14px;
}

<div
  className="c0"
/>
`;

exports[`placementLeft Popovers 1`] = `<placementLeft />`;

exports[`placementRight Popovers 1`] = `<placementRight />`;
